<resources>
    <string name="app_name">Cowrywise Test App</string>
    <string name="signup">Sign up</string>
    <string name="cc">Currency \nCalculator
        <font color='#0CD599'>.</font>
    </string>
    <string name="rates_info">
        <u>Mid-market exchange rate at 13:38 UTC</u>
    </string>
    <string name="email_info">
        <u>Get rate alerts straight to your email inbox</u>
    </string>


    <string name="past_thirty_days">Past 30 days</string>
    <string name="past_ninety_days">Past 90 days</string>
    <string name="convert">Convert</string>
    <string name="usd">USD</string>
    <string name="api">API</string>
    <string name="reload">Refresh</string>
    <string name="submit">Update</string>
</resources>
