<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:scrollbars="none"
        android:id="@+id/page"
        tools:context=".ui.activities.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/landing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@android:color/white"
                android:elevation="0dp"
                android:theme="@style/ToolbarTheme"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <TextView
                android:id="@+id/symbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cc"
                android:textSize="45sp"
                android:textColor="@color/colorAccent2"
                android:layout_marginStart="20dp"
                android:layout_marginTop="45dp"
                android:fontFamily="@font/monts_bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/landing_toolbar" />

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/base_input_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/symbol"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                    android:id="@+id/base_text_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    app:secondaryColor="@color/grey"
                    app:primaryColor="@color/grey"
                    app:panelBackgroundColor="@color/grey3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                        android:id="@+id/input_base"
                        android:inputType="number"
                        android:maxLines="1"
                        android:maxLength="12"
                        android:textColor="@color/black"
                        android:fontFamily="@font/monts_bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

            </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

            <TextView
                    android:id="@+id/base_currency_label"
                    android:text="@string/usd"
                    android:textColor="@color/grey4"
                    app:layout_constraintBottom_toBottomOf="@id/base_text_field"
                    android:layout_marginEnd="20dp"
                    android:textSize="16sp"
                    android:fontFamily="@font/monts_bold"
                    app:layout_constraintTop_toTopOf="@id/base_text_field"
                    app:layout_constraintEnd_toEndOf="@id/base_text_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/target_input_layout"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/base_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                    android:id="@+id/target_text_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    app:secondaryColor="@color/grey"
                    app:primaryColor="@color/grey"
                    app:enabled="false"
                    app:panelBackgroundColor="@color/grey3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                        android:id="@+id/input_target"
                        android:inputType="number"
                        android:maxLines="1"
                        android:maxLength="12"
                        android:enabled="false"
                        android:textColor="@color/black"
                        android:fontFamily="@font/monts_bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

            </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

            <TextView
                    android:id="@+id/target_currency_label"
                    android:text="@string/usd"
                    android:textColor="@color/grey4"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@id/target_text_field"
                    android:layout_marginEnd="20dp"
                    android:fontFamily="@font/monts_bold"
                    app:layout_constraintTop_toTopOf="@id/target_text_field"
                    app:layout_constraintEnd_toEndOf="@id/target_text_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
                android:id="@+id/conversion_selection_layout"
                app:layout_constraintTop_toBottomOf="@id/target_input_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/base_btn"
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    style="@style/CurrencyButtons"
                    android:text="@string/usd" />

            <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_swap_horiz_black_24dp"
                    app:tint="@color/grey" />

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/target_btn"
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    style="@style/CurrencyButtons"
                    android:text="@string/usd" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
                app:layout_constraintTop_toBottomOf="@id/conversion_selection_layout"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:id="@+id/convert_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                app:backgroundTint="@color/colorAccent"
                style="@style/ConvertButton"
                android:text="@string/convert" />

        <TextView
                android:id="@+id/rates_info"
                app:layout_constraintTop_toBottomOf="@id/convert_btn"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent2"
                android:text="@string/rates_info" />

        <androidx.cardview.widget.CardView
                android:id="@+id/chart_card"
                app:cardElevation="0dp"
                app:cardCornerRadius="15dp"
                app:cardBackgroundColor="@color/colorAccent2"
                app:layout_constraintTop_toBottomOf="@id/rates_info"
                android:layout_marginTop="35dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="match_parent"
                android:layout_height="500dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <com.google.android.material.button.MaterialButton
                        android:id="@+id/history_thirty_btn"
                        app:layout_constraintEnd_toStartOf="@id/history_ninety_btn"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/HistoryButtons"
                        android:text="@string/past_thirty_days" />

                <com.google.android.material.button.MaterialButton
                        android:id="@+id/history_ninety_btn"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="20dp"
                        android:layout_width="wrap_content"
                        style="@style/HistoryButtons"
                        android:text="@string/past_ninety_days"
                        app:layout_constraintStart_toEndOf="@+id/history_thirty_btn"
                        android:layout_height="wrap_content" />

                <com.github.mikephil.charting.charts.LineChart
                        android:id="@+id/chart"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/history_ninety_btn"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:layout_gravity="center_vertical" />

                <ProgressBar
                        android:id="@+id/progress_indicator"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:elevation="2dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/history_thirty_btn"
                        app:layout_constraintBottom_toBottomOf="@id/history_thirty_btn"
                        app:layout_constraintBottom_toTopOf="@id/chart" />

                <TextView
                        android:id="@+id/email_info"
                        app:layout_constraintTop_toBottomOf="@id/chart"
                        android:layout_marginTop="30dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="20dp"
                        android:layout_marginStart="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/email_info" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <View
                android:layout_width="match_parent"
                android:background="@color/colorAccent2"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_height="40dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>